# grill

./: .gitignore  BeefProj.toml  Cargo.toml  LICENSE  Package.toml  README.md
.vagrant/machines/default/hyperv/: vagrant_cwd
Click/: BeefProj.toml  Package.toml
Click/src/: App.bf  Arguments.bf  Attributes.bf  CLI.bf  CLIError.bf  Commands.bf  HelpCommand.bf  Styled.bf
choco/: grill.nuspec
chocopkg/: grill.0.1.0.nupkg  grill.nuspec
chocopkg/tools/: VERIFICATION.txt  chocolateyinstall.ps1  grill-0.1.0-x86_64.msi
proj/: BeefProj.toml  BeefSpace.toml  Grill.toml
proj/src/: Program.bf
projects/CLI/: BeefProj.toml  Package.toml
projects/CLI/src/: Program.bf  ResourceProvider.bf
projects/CLI/src/Commands/: Run.bf
projects/Click/: BeefProj.toml  Package.toml
projects/Click/src/: Argument.bf  Arguments.bf  Attributes.bf  CLI.bf  Commands.bf  HelpCommand.bf  ICommand.bf
projects/Click/src/Internal/: Styled.bf
projects/Core/: BeefProj.toml  Package.toml
projects/Core/src/: Beef.bf  Directory.bf  Identifier.bf  Manifest.bf  Packages.bf  Paths.bf  Result.bf  Semver.bf  Workspace.bf  WorkspaceBuilder.bf
projects/Core/src/Beef/: BeefBuild.bf  (+2 more)
projects/Iterators/: BeefProj.toml  Package.toml
projects/Iterators/src/: Chained.bf  Filter.bf  FilterMap.bf  IEnumerator.bf  Map.bf
projects/SyncErr/: BeefProj.toml  Package.toml
projects/SyncErr/src/: Errors.bf  Mixins.bf  Result.bf
resources/templates/: BeefProj.toml  BeefProjBinary.toml  Package.toml  Program.bf
src/: IRegistry.bf  Index.bf  Manifest.bf  Package.bf  PackageCache.bf  Packages.bf  PathRegistry.bf  Paths.bf  Program.bf  Result.bf  Semver.bf  Workspace.bf  WorkspaceBuilder.bf  beef.rs  commands.rs  dir.rs  index.rs  lib.rs  lock.rs  log.rs  main.rs  manifest.rs  ops.rs  paths.rs  resolver.rs  web.rs  webapi.rs
src/Beef/: BeefProj.bf
src/Commands/: Build.bf  Make.bf  MakeCommand.bf  New.bf  NewCommand.bf  Test.bf
src/Console/: Extensions.bf  GConsole.bf  Log.bf  MultiProgress.bf  Progress.bf  ProgressBar.bf  ProgressSpinner.bf  Styled.bf
src/Resolver/: Lock.bf  PackageCache.bf  Resolver.bf
src/Resources/: FileResource.bf  ResourceManager.bf  Templates.bf
src/Util/: Static.bf
src/commands/: add.rs  init.rs  install.rs  list.rs  login.rs  make.rs  new.rs  publish.rs  purge.rs  rebuild.rs  remove.rs  update.rs  update_index.rs
src/ops/: beefbuild.rs  init.rs  install.rs  make.rs  rebuild.rs
testproj/: BeefProj.toml
testproj/src/: Program.bf
tests/Basic/: BeefProj.toml  Package.toml
tests/Basic/src/: Program.bf
tests/Features/: BeefProj.toml  Package.toml
tests/Features/src/: Program.bf
wix/: main.wxs
(+15 files in other folders)
