[package]
name = "grill"
version = "0.1.0"
edition = "2021"
authors = ["RogueMacro <william.tetlie@gmail.com>"]
license = "GNU GPLv3"
license-file = "LICENSE"
description = "A package manager for the Beef Programming Language"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
clap = "2.34"
console = "0.15"
dialoguer = "0.9"
dirs = "4.0"
git2 = "0.13"
indicatif = "0.17.0-beta.1"
reqwest = "0.11"
rm_rf = "0.6"
semver = { version = "1.0", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.5"
url = { version = "2.2", features = ["serde"] }
