[package]
name = "grill"
version = "0.2.2"
edition = "2021"
authors = ["William Tetlie <william.tetlie@gmail.com>"]
license-file = "LICENSE"
description = "A package manager for the Beef Programming Language"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
anyhow = { version = "1.0.53", features = ["backtrace"] }
clap = { version = "3.0.10", features = ["cargo"] }
console = "0.15.0"
dialoguer = "0.10.2"
either = "1.8.0"
env_logger = "0.9.0"
dirs = "4.0.0"
git2 = "0.15.0"
indicatif = "0.17.0-beta.1"
itertools = "0.10.3"
lazy_static = "1.4.0"
log = "0.4.14"
maplit = "1.0.2"
multi_log = "0.1.2"
reqwest = { version = "0.11.9", features = ["blocking", "json"] }
rm_rf = "0.6.1"
semver = { version = "1.0.4", features = ["serde"] }
serde = { version = "1.0.133", features = ["derive"] }
serde_json = "1.0.75"
simplelog = "0.12.0"
toml = "0.5.8"
url = { version = "2.2.2", features = ["serde"] }
